--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -341,7 +341,10 @@
       </g>
     </svg>
     <input type="text" [(ngModel)]="title" />
-    <span>{{ title }} app is running!</span> || <app-server>{{ "This is my server" }}</app-server>
+    <span>{{ title }} app is running!</span> || 
+    <div class="app-servers">This is my server - class</div>
+    <!--<div app-servers>This is my server - attribute</div> -->
+    <!--<app-servers>{{ "This is my server - tag" }}</app-servers>-->
 
     <svg id="rocket-smoke" xmlns="http://www.w3.org/2000/svg" width="516.119" height="1083.632" viewBox="0 0 516.119 1083.632">
       <title>Rocket Ship Smoke</title>
